<resources>
    <string name="app_name">NotebooksCatalogFragments</string>
    <string name="btn_add">Add</string>
    <string name="device_image">Device image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ram">RAM</string>
    <string name="gb">Gb</string>
    <string name="model">Model</string>
    <string name="notebook">Notebook</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="drive">Drive:</string>
    <string name="processor">Processor:</string>
    <string name="create_ru">Создать</string>
    <string name="device_model">Device model</string>
    <string name="save">Save</string>
</resources>