<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivNoteImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription=""
        app:layout_constraintEnd_toStartOf="@+id/llModel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_device" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llModel"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivNoteImg"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:entries="@array/device_models"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etModel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/device_model"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/spBrand"
            app:layout_constraintTop_toBottomOf="@+id/spBrand" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgDeviceTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llModel">

        <RadioButton
            android:id="@+id/rbNotebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/notebook" />

        <RadioButton
            android:id="@+id/rbSmartphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smartphone" />

        <RadioButton
            android:id="@+id/rbTablet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tablet" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spProcModel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgDeviceTypes" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ram"
        app:layout_constraintEnd_toStartOf="@+id/sbRam"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spProcModel" />

    <SeekBar
        android:id="@+id/sbRam"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="32"
        android:progress="2"
        app:layout_constraintEnd_toStartOf="@+id/tvRam"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/spProcModel" />

    <TextView
        android:id="@+id/tvRam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sbRam"
        app:layout_constraintTop_toBottomOf="@+id/spProcModel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="48dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/drive"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/slDrive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbRam" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slDrive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stepSize="128"
        android:value="256"
        android:valueFrom="128"
        android:valueTo="2048"
        app:layout_constraintEnd_toStartOf="@+id/etDriveSize"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/sbRam" />

    <EditText
        android:id="@+id/etDriveSize"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/slDrive"
        app:layout_constraintTop_toBottomOf="@+id/sbRam" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Screen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slDrive" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/screens"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toStartOf="@+id/spResolution"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spResolution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/resolutions"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spSize"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spSize" />

</androidx.constraintlayout.widget.ConstraintLayout>

